--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,10 @@
   margin: 0;
 }
 
+@media screen and (max-width: 600px) {
+  .App {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
