Adjusted css to support mobile view

--- a/src/components/Jobs/ViewJobs/viewjobs.css
+++ b/src/components/Jobs/ViewJobs/viewjobs.css
@@ -10,4 +10,6 @@ tr.MuiTableRow-root.MuiTableRow-hover {
 
 @media screen and (max-width: 600px) {
     .makeStyles-root-4 { width: 100% !important; }
+    .MuiContainer-root { width: 100% !important; }
+    span.MuiTab-wrapper { font-size: 12px; }
 }
