--- a/src/components/Jobs/CreateJob/jobs.css
+++ b/src/components/Jobs/CreateJob/jobs.css
@@ -1,5 +1,11 @@
 
+
 @media screen and (max-width: 600px) {
+  form > .css-1q338gf-MuiPaper-root {
+    width: 80vw !important;
+  }
+
+  /*
   div#content-heading {
     text-align: center !important;
   }
@@ -10,6 +16,7 @@
     text-align: left;
     margin: 1rem;
   }
+*/
 
   span.MuiTypography-root.MuiTypography-gutterBottom {
     font-weight: 500;
